--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "hyperdev",
     "express"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "mocha": "^5.0.0"
+  }
 }
