--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "What am I about?",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "mocha --exit"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
@@ -26,6 +27,8 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
     "mocha": "^5.0.0"
   }
 }
