--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
-    "mocha": "^5.0.0"
+    "mocha": "^5.0.0",
+    "mongoose": "^5.0.1"
   }
 }
